[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/fonts/nokiafc22.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes_and_scripts/components/stage/LevelFinishedUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 80
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 30
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
size = 40
font_data = ExtResource( 1 )

[node name="LevelFinishedUI" type="CanvasLayer"]
layer = 3
script = ExtResource( 2 )

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1280.0
margin_top = 124.0
margin_right = -1280.0
margin_bottom = -496.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "STAGE_FINISHED_UI_TITLE"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -418.5
margin_top = -452.0
margin_right = 418.5
margin_bottom = -44.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="VBoxContainer"]
visible = false
margin_right = 837.0
margin_bottom = 38.0
grow_vertical = 2
rect_pivot_offset = Vector2( -449.162, 269.37 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bitcoins" type="Label" parent="VBoxContainer"]
visible = false
margin_right = 837.0
margin_bottom = 38.0
grow_horizontal = 2
rect_pivot_offset = Vector2( -449.162, 269.37 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goToNextLevel" type="Button" parent="VBoxContainer"]
visible = false
margin_right = 837.0
margin_bottom = 56.0
grow_horizontal = 2
focus_mode = 0
custom_fonts/font = SubResource( 3 )
disabled = true
enabled_focus_mode = 0
text = "STAGE_FINISHED_UI_GO_TO_NEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restartStage" type="Button" parent="VBoxContainer"]
visible = false
margin_right = 837.0
margin_bottom = 56.0
grow_horizontal = 2
focus_mode = 0
custom_fonts/font = SubResource( 3 )
disabled = true
enabled_focus_mode = 0
text = "STAGE_FINISHED_UI_PLAY_AGAIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goBack" type="Button" parent="VBoxContainer"]
visible = false
margin_right = 837.0
margin_bottom = 56.0
grow_horizontal = 2
focus_mode = 0
custom_fonts/font = SubResource( 4 )
disabled = true
text = "STAGE_PAUSE_UI_GO_BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleMoving" type="Tween" parent="."]

[connection signal="pressed" from="VBoxContainer/goToNextLevel" to="." method="_on_goToNextLevel_pressed"]
[connection signal="pressed" from="VBoxContainer/restartStage" to="." method="_on_restartStage_pressed"]
[connection signal="pressed" from="VBoxContainer/goBack" to="." method="_on_goBack_pressed"]
